Revises JCL to use better logging and dynamic invocation practices